<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.NavstiveneActivity">

    <TextView
        android:id="@+id/textViewNameDetail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="TextView" />

    <EditText
        android:id="@+id/editTextPopisek"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Zadejte popisek místa"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewHodnoceni"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/title_textView_hodnoceni" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <SeekBar
        android:id="@+id/seekBarHodnoceni"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewHodnoceniHodnota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="" />
</LinearLayout>

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPoriditFotografii"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_button_fotografie" />

        <Button
            android:id="@+id/btnNavstiveneMisto"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_button_ulozitNavstiveneMisto" />
    </LinearLayout>
</LinearLayout>