<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DetailNavstiveneActivity">

    <ImageView
        android:id="@+id/imageViewPhotoNavstivene"
        android:layout_width="match_parent"
        android:layout_height="344dp" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextViewDetailNavstiveneName" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneKilometers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDetailNavstiveneHodnoceni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNavstiveneUpravit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_upravit" />

        <Button
            android:id="@+id/btnNavstiveneSmazat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_smazat"/>
        <Button
            android:id="@+id/btnZpetNaMapu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_zpet_na_mapu"/>
    </LinearLayout>
</LinearLayout>
